--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,25 @@
-# backend/Dockerfile
-
-FROM node:18-alpine
+# Etapa de compilación
+FROM node:18-alpine AS build
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
-
+COPY ./backend-files/package*.json ./
 RUN npm install
 
-COPY . .
+COPY ./backend-files .
 
 RUN npm run build
 
-EXPOSE 3000
+# Etapa de producción
+# FROM node:18-alpine
 
-CMD ["npm", "run", "start:prod"]
+# WORKDIR /usr/src/app
+
+# COPY package*.json ./
+# RUN npm install --only=production
+
+# COPY --from=build /usr/src/app/dist ./dist
+
+# EXPOSE 3000
+
+# CMD ["node", "dist/main"]
